# pyscaffoldext-dsproject

./: .cirrus.yml  .coveragerc  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: make-demo-repo.yml  publish-package.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
src/pyscaffoldext/dsproject/: __init__.py  extension.py
src/pyscaffoldext/dsproject/templates/: Dockerfile.template  __init__.py  config_ipynb.template  environment_yaml.template  environment_yml.template  gitignore_data.template  readme_md.template  template_ipynb.template  train_model_py.template
tests/: conftest.py  helpers.py  test_custom_extension.py
